# st_gazebo_perfect_map_generator

./: CMakeLists.txt
launch/: start_world.launch
src/: collision_map_creator.cpp
worlds/: map_creator.world
